changes to the welcome.html links

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -78,8 +78,7 @@
             <div class="card mb-3 first-container-home" style="border: none; max-width: 100%">
                 <div class="row g-0">
                     <div class="col-md-6 my-1">
-                        <img src="./images/office.png"
-                            class="img-fluid rounded-start" alt="lawyers-office" />
+                        <img src="./images/office.png" class="img-fluid rounded-start" alt="lawyers-office" />
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
@@ -105,12 +104,10 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <img src="./images/agreement.png"
-                            class="img-fluid rounded-start" alt="court" />
+                        <img src="./images/agreement.png" class="img-fluid rounded-start" alt="court" />
                     </div>
                     <div class="col-md-6 my-1">
-                        <img src="./images/values.png"
-                            class="img-fluid rounded-start" alt="principles-and-values" />
+                        <img src="./images/values.png" class="img-fluid rounded-start" alt="principles-and-values" />
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
@@ -127,42 +124,17 @@
             </div>
         </section>
 
-        <section class="services-section">
+        <section class="services-section my-4">
             <h2 class="text-center my-4">Servicios</h2>
 
-            <div class="row row-cols-1 row-cols-md-2 g-4 my-5">
-                <div class="col">
-                    <div class="card welcome-cards">
-                        <div class="card-body ">
-                            <h5 class="card-title">Derecho Civil \ Mercantil</h5>
-                            <a href="/derechocivilymercantil" class="btn btn-primary">Conócenos</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card welcome-cards">
-                        <div class="card-body">
-                            <h5 class="card-title">Derecho Familiar</h5>
-                            <a href="/derechofamiliar" class="btn btn-primary">Conócenos</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card welcome-cards">
-                        <div class="card-body">
-                            <h5 class="card-title">Derecho Inmobiliario</h5>
-                            <a href="/derechoinmobiliario" class="btn btn-primary">Conócenos</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card welcome-cards">
-                        <div class="card-body">
-                            <h5 class="card-title">Derecho Penal</h5>
-                            <a href="/derechopenal" class="btn btn-primary">Conócenos</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="list-group text-center">
+                <a href="/derechocivilymercantil" class="welcome-link list-group-item list-group-item-action" aria-current="true">
+                    Derecho Civil y Mercantil
+                </a>
+                <a href="/derechofamiliar" class="welcome-link list-group-item list-group-item-action">Derecho Familiar</a>
+                <a href="/derechoinmobiliario" class="welcome-link list-group-item list-group-item-action">Derecho Inmobiliario</a>
+                <a href="/derechopenal" class="welcome-link list-group-item list-group-item-action">Derecho Penal</a>
+                <a href="/investigaciones" class="welcome-link list-group-item list-group-item-action">Investigaciónes</a>
             </div>
         </section>
 
