penal.html changes and addition of images

--- a/public/penal.html
+++ b/public/penal.html
@@ -48,10 +48,41 @@
     <main class="ml-3 mr-3 penal-main-section">
         <section class="first-main-section">
             <div class="container-fluid first-header">
-                <h5 class="text-center">Área Penal</h5>
-                <p class="text-center fist-paragraph">
-                    En el área de derecho penal nos especializamos en diferentes ramas
-                    como lo son maleantes, etc.
+                <h1 class="text-center">Litigio en materia penal</h1>
+                <p class="fist-paragraph">
+                    El derecho penal es la rama del derecho que regula la actividad criminal en el estado. Todas las
+                    conductas delictivas están comprendidas en esta materia y su litigio debe ser realizado de manera
+                    profesional y eficiente, pues pone en riesgo tanto a las víctimas como a los victimarios,
+                    llevándolos incluso a la pérdida de su libertad.
+                </p>
+                <p class="fist-paragraph">
+                    El catálogo de delitos que contempla el derecho penal es muy amplio, contemplando aquellos que van
+                    desde el robo hasta la violencia, pasando por incumplimiento de mandatos judiciales y engaños.
+                </p>
+                <p class="fist-paragraph">
+                    Cuando una persona es acusada de algún delito patrimonial, como fraude, robo o abuso de confianza,
+                    una buena defensa comienza desde la asesoría que pueda brindarle un equipo jurídico profesional,
+                    estableciendo las bases sobre las que se sustentará su defensa para poder llevar a buen fin el caso.
+                </p>
+                <p class="fist-paragraph">
+                    También las víctimas necesitan de una asesoría, orientación, acompañamiento y apoyo cuando han sido
+                    afectadas por diversos delitos, como violencia familiar, homicidio, secuestro, lesiones, trata de
+                    personas o privación ilegal de la libertad.
+                </p>
+                <p class="fist-paragraph">
+                    Incluso en el caso de delitos de delincuencia organizada requieren un apoyo jurídico que determine
+                    el seguimiento y resolución del caso, mediante un litigio profesional y, sobre todo, honesto.
+                </p>
+                <p class="fist-paragraph">
+                    El litigio en materia penal conlleva una gran responsabilidad y debe ser realizado desde las bases
+                    más honestas y transparentes, tanto para los imputados como para las víctimas, persiguiendo en todo
+                    momento la justicia que, en cada caso, debe ser tratado de forma individual.
+                </p>
+                <p class="fist-paragraph">
+                    Bajo el legado de nuestro fundador, en Iglesias y Abogados estamos comprometidos con la justicia en
+                    materia penal, haciendo un análisis exhaustivo de cada uno de los casos y comunicando, con total
+                    transparencia, las posibles soluciones a los diferentes delitos, sin prometer resultados que no
+                    puedan ser obtenidos.
                 </p>
             </div>
         </section>
@@ -60,24 +91,19 @@
             <div class="card mb-3" style="border: none;">
                 <div class="row g-0">
                     <div class="col-md-4 embed-responsive embed-responsive-16by9">
-                        <img src="./images/family.png" class="information-img embed-responsive-item rounded-start"
+                        <img src="./images/criminal.png" class="information-img embed-responsive-item rounded-start"
                             alt="family-law">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h2 class="card-title">En Iglesias y Abogados estamos comprometidos con los conflictos
-                                familiares, ofreciendo apoyo jurídico en:</h2>
+                            <h2 class="card-title">En materia penal, ofrecemos asesoría y apoyo en:</h2>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Divorcios.</li>
-                                <li class="list-group-item">Liquidación de sociedad conyugal.</li>
-                                <li class="list-group-item">Régimen de convivencia.</li>
-                                <li class="list-group-item">Pensión alimenticia.</li>
-                                <li class="list-group-item">Aumento y disminución de pensiones.</li>
-                                <li class="list-group-item">Guardias y custodias.</li>
-                                <li class="list-group-item">Cambio de régimen patrimonial.</li>
-                                <li class="list-group-item">Compensaciones familiares.</li>
-                                <li class="list-group-item">Violencia familiar.</li>
-                                <li class="list-group-item">Órdenes de protección.</li>
+                                <li class="list-group-item">Allanamiento de morada.</li>
+                                <li class="list-group-item">Apoyo a víctimas y asesoría jurídica en materia de delitos sexuales (violación, abuso sexual, acoso sexual).</li>
+                                <li class="list-group-item">Defensa y o asesoría jurídica en delitos patrimoniales (fraude, abuso de confianza y robos).</li>
+                                <li class="list-group-item">Delincuencia organizada.</li>
+                                <li class="list-group-item">Delitos ambientales.</li>
+                                <li class="list-group-item">Desacatos.</li>
                             </ul>
                         </div>
                     </div>
