style changes for penal html

--- a/public/penal.html
+++ b/public/penal.html
@@ -99,16 +99,39 @@
                             <h2 class="card-title">En materia penal, ofrecemos asesoría y apoyo en:</h2>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Allanamiento de morada.</li>
-                                <li class="list-group-item">Apoyo a víctimas y asesoría jurídica en materia de delitos sexuales (violación, abuso sexual, acoso sexual).</li>
-                                <li class="list-group-item">Defensa y o asesoría jurídica en delitos patrimoniales (fraude, abuso de confianza y robos).</li>
+                                <li class="list-group-item">Apoyo a víctimas y asesoría jurídica en materia de delitos
+                                    sexuales (violación, abuso sexual, acoso sexual).</li>
+                                <li class="list-group-item">Defensa y o asesoría jurídica en delitos patrimoniales
+                                    (fraude, abuso de confianza y robos).</li>
                                 <li class="list-group-item">Delincuencia organizada.</li>
                                 <li class="list-group-item">Delitos ambientales.</li>
                                 <li class="list-group-item">Desacatos.</li>
+                                <li class="list-group-item">Despojos.</li>
+                                <li class="list-group-item">Encubierto.</li>
+                                <li class="list-group-item">Extorsiones.</li>
+                                <li class="list-group-item">Falsedad ante autoridades.</li>
+                                <li class="list-group-item">Falsificación de documentos.</li>
+                                <li class="list-group-item">Homicidio.</li>
+                                <li class="list-group-item">Incumplimiento de obligaciones alimenticias.</li>
+                                <li class="list-group-item">Lesiones.</li>
+                                <li class="list-group-item">Posesión, portación y uso de armas de fuego.</li>
+                                <li class="list-group-item">Privación ilegal de la libertad.</li>
+                                <li class="list-group-item">Rompimiento de sellos.</li>
+                                <li class="list-group-item">Secuestro.</li>
+                                <li class="list-group-item">Sustracción de menores.</li>
+                                <li class="list-group-item">Trata de personas.</li>
+                                <li class="list-group-item">Ultrajes (insulto a la autoridad).</li>
+                                <li class="list-group-item">Violencia Familiar.</li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="information-header text-center py-4">
+            <h2 >Ofrecemos asesoría y ejecución en toda la República
+                Mexicana, ante tribunales locales y federales.</h2>
         </section>
 
         <!-- {{!-- Create a button so all the users can go to the publications section
@@ -119,9 +142,9 @@
                 <div class="text-center card-header">Featured</div>
                 --}} -->
                 <div class="text-center card-body">
-                    <h5 class="card-title">
-                        ¿Tienes dudas? Tranquil@ estamos para apoyarte.
-                    </h5>
+                    <h3 class="card-title">
+                        No importa el conflicto, siempre hay una solución
+                    </h3>
                     <a href="/publicaciones" class="btn btn-primary">Publicaciónes</a>
                 </div>
             </div>
@@ -133,7 +156,7 @@
     <footer>
         <section id="contacto" class="first-footer-section">
             <div class="card mb-0" style="max-width: 100%; margin-bottom: 0%; background-color: #050a30">
-                <h2 class="text-left mx-3">Contacto</h2>
+                <h4 class="text-left mx-3">Contacto</h4>
                 <div class="row g-0 ">
                     <div class="col-md-6 ">
                         <div class="card-body">
