changes to the familiar and civil htmls

--- a/public/civil.html
+++ b/public/civil.html
@@ -104,6 +104,11 @@
             </div>
         </section>
 
+        <section class="information-header text-center py-4">
+            <h2 >Ofrecemos asesoría y ejecución en toda la República
+                Mexicana, ante tribunales locales y federales.</h2>
+        </section>
+
         <!-- {{!-- Create a button so all the users can go to the publications section
         --}} -->
         <section class="redirected-to-publications">
