--- a/public/familiar.html
+++ b/public/familiar.html
@@ -101,11 +101,26 @@
                                 <li class="list-group-item">Compensaciones familiares.</li>
                                 <li class="list-group-item">Violencia familiar.</li>
                                 <li class="list-group-item">Órdenes de protección.</li>
+                                <li class="list-group-item">Sustracción de menores.</li>
+                                <li class="list-group-item">Restitución internacional de menores.</li>
+                                <li class="list-group-item">Restricciónes familiares.</li>
+                                <li class="list-group-item">Estados de interdicción.</li>
+                                <li class="list-group-item">Procedimientos de declaración de ausencia y presunción de
+                                    muerte.</li>
+                                <li class="list-group-item">Sucesiónes testamentarias e intestamentarias.</li>
+                                <li class="list-group-item">Reconocimiento de hijos.</li>
+                                <li class="list-group-item">Reconocimiento de paternidad.</li>
+                                <li class="list-group-item">Amparos.</li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="information-header text-center py-4">
+            <h2>Ofrecemos asesoría y ejecución en toda la República
+                Mexicana, ante tribunales locales y federales.</h2>
         </section>
 
         <!-- {{!-- Create a button so all the users can go to the publications section
