addition of images and investigations html complete, changes con html padding images

--- a/public/investigaciones.html
+++ b/public/investigaciones.html
@@ -42,39 +42,20 @@
         </nav>
 
         <!-- {{! For second a background container with an image, as the previews one is going to be on all the handlebars}} -->
-        <div class="container-fluid background-image-familiar"></div>
+        <div class="container-fluid background-image-investigaciones"></div>
     </header>
 
     <main class="mx-3 familiar-main-section">
         <section class="first-main-section">
             <div class='container-fluid first-header'>
-                <h1 class='text-center'>Litigio en materia familiar</h1>
-                <p class='fist-paragraph'>El derecho familiar es la rama del derecho civil que se encarga de regular
-                    todas las relaciones que se suscitan entre los miembros de una familia.
+                <h1 class='text-center'>Investigaciones</h1>
+                <p class='fist-paragraph'>
+                    Como parte esencial del litigio, la investigación conforma uno de los elementos en los que debe
+                    basarse cualquier caso jurídico.
                 </p>
-                <p class='fist-paragraph'>En la actualidad, ante los diversos cambios que experimenta la sociedad
-                    mexicana, los conflictos entre miembros del núcleo familiar son cada día más comunes, por eso se
-                    hace necesario contar con el apoyo jurídico necesario para llegar a una pronta y adecuada solución.
-                </p>
-                <p class='fist-paragraph'>En caso de un divorcio, por ejemplo, existen varias modalidades, como
-                    divorcios voluntarios, divorcios express o divorcios administrativos. En cualquier caso, es
-                    importante contar con la asesoría jurídica y el apoyo adecuado.
-                </p>
-                <p class='fist-paragraph'>De igual forma, ante una separación, la obtención de una pensión alimenticia
-                    es una materia de litigio importante. Cómo calcular esta pensión, saber lo que incluye y cómo
-                    tramitarla, al igual que la determinación de un régimen de convivencia con los hijos, son conceptos
-                    en los que se debe asesorar al interesado de manera eficiente.
-                </p>
-                <p class='fist-paragraph'>La importancia del tema de la violencia familiar en nuestros días hace
-                    necesario contar con un equipo de abogados que defienda, en todo momento, a las víctimas,
-                    apoyándolos en la preservación de sus derechos. Desde denunciar la violencia familiar hasta obtener
-                    justicia ante este tipo de delitos son procesos delicados que deben ser tratados de la forma más
-                    profesional y adecuada.
-                </p>
-                <p class='fist-paragraph'>De igual forma, los procedimientos que conlleva una sucesión testamentaria, o
-                    los conflictos que se presentan en el caso de que un familiar haya fallecido sin testamento,
-                    requieren también un trabajo profesional que asegure un buen término, con justicia y equidad para
-                    los interesados.
+                <p class='fist-paragraph'>
+                    En Iglesias y Abogados tenemos la experiencia necesaria para conformar cualquier investigación de
+                    forma profesional, adecuándonos a las necesidades de nuestros clientes.
                 </p>
             </div>
         </section>
@@ -83,24 +64,19 @@
             <div class="card mb-3" style="border: none;">
                 <div class="row g-0">
                     <div class="col-md-4 embed-responsive embed-responsive-16by9">
-                        <img src="./images/family.png" class="information-img embed-responsive-item rounded-start"
+                        <img src="./images/research.png" class="information-img embed-responsive-item rounded-start px-4"
                             alt="family-law">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h2 class="card-title">En Iglesias y Abogados estamos comprometidos con los conflictos
-                                familiares, ofreciendo apoyo jurídico en:</h2>
+                            <h2 class="card-title">
+                                Los tipos de investigaciones que realizamos son:
+                            </h2>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Divorcios.</li>
-                                <li class="list-group-item">Liquidación de sociedad conyugal.</li>
-                                <li class="list-group-item">Régimen de convivencia.</li>
-                                <li class="list-group-item">Pensión alimenticia.</li>
-                                <li class="list-group-item">Aumento y disminución de pensiones.</li>
-                                <li class="list-group-item">Guardias y custodias.</li>
-                                <li class="list-group-item">Cambio de régimen patrimonial.</li>
-                                <li class="list-group-item">Compensaciones familiares.</li>
-                                <li class="list-group-item">Violencia familiar.</li>
-                                <li class="list-group-item">Órdenes de protección.</li>
+                                <li class="list-group-item">Jurídicas.</li>
+                                <li class="list-group-item">Financieras.</li>
+                                <li class="list-group-item">Infidelidades.</li>
+                                <li class="list-group-item">Búsqueda y localización de personas.</li>
                             </ul>
                         </div>
                     </div>
