--- a/public/familiar.html
+++ b/public/familiar.html
@@ -83,7 +83,7 @@
             <div class="card mb-3" style="border: none;">
                 <div class="row g-0">
                     <div class="col-md-4 embed-responsive embed-responsive-16by9">
-                        <img src="./images/family.png" class="information-img embed-responsive-item rounded-start"
+                        <img src="./images/family.png" class="information-img embed-responsive-item rounded-start px-4"
                             alt="family-law">
                     </div>
                     <div class="col-md-8">
