--- a/public/inmobiliario.html
+++ b/public/inmobiliario.html
@@ -42,107 +42,80 @@
         </nav>
 
         <!-- {{! For second a background container with an image, as the previews one is going to be on all the handlebars}} -->
-        <div class="container-fluid background-image-familiar"></div>
+        <div class="container-fluid background-image-inmobiliario"></div>
     </header>
 
-    <main class="ml-3 mr-3 familiar-main-section">
-
+    <main class="mx-3 civil-main-section">
         <section class="first-main-section">
-            <div class='container-fluid first-header'>
-                <h1 class='text-center'>Área Familiar</h1>
-                <p class='text-center fist-paragraph'>En el área de derecho familiar nos especializamos en diferentes
-                    ramas
-                    como lo son divs, etc.</p>
+            <div class="container-fluid first-header">
+                <h1 class="text-center">Litigio en materia inmobiliaria</h1>
+                <p class=" fist-paragraph">
+                    El derecho inmobiliario se encarga de regular todo lo referente a bienes inmuebles y en Iglesias y
+                    Asociados sabemos la importancia del patrimonio de nuestros clientes.
+                </p>
+                <p class="fist-paragraph">
+                    Conocemos los instrumentos y herramientas para conformar un buen contrato de arrendamiento, ya sea
+                    comercial, industrial o de casa habitación, y tenemos la experiencia para litigar cualquier
+                    conflicto que pueda suscitarse de esta acción.
+                </p>
+                <p class="fist-paragraph">
+                    Además, apoyamos en la obtención y el cambio de uso de habitación.
+                </p>
+                <p class="fist-paragraph">
+                    Tomando en cuenta el esfuerzo que cada persona realiza para adquirir un bien inmueble, asesoramos y
+                    apoyamos a todos nuestros clientes para poder recuperar sus bienes.
+                </p>
             </div>
         </section>
 
         <section class="second-main-section">
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card" style="background-color: #C3CEDA;">
-                        <img src="https://cdn.pixabay.com/photo/2017/08/06/20/11/wedding-2595862_1280.jpg"
-                            class="img-fluid card-img-top" alt="mariage-img">
-                        <div class="card-body">
-                            <h5 class="card-title">Matrimonio</h5>
-                            <p class="card-text">Mariage Law information</p>
-                        </div>
+            <div class="card mb-3" style="border: none;">
+                <div class="row g-0">
+                    <div class="col-md-4 embed-responsive embed-responsive-16by9">
+                        <img src="./images/inmobiliarie.png" class="information-img embed-responsive-item rounded-start px-4"
+                            alt="family-law">
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card mb-3" style="background-color: #C3CEDA;">
-                        <img src="https://cdn.pixabay.com/photo/2015/08/26/16/18/breakup-908714_1280.jpg"
-                            class="img-fluid card-img-top" alt="divorce-img">
+                    <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Divorcio</h5>
-                            <p class="card-text">Divorce Law information</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card mb-3" style="background-color: #C3CEDA;">
-                        <img src="https://cdn.pixabay.com/photo/2017/06/20/22/14/man-2425121_1280.jpg"
-                            class="img-fluid card-img-top" alt="couple-img">
-                        <div class="card-body">
-                            <h5 class="card-title">Concubinato</h5>
-                            <p class="card-text">Concubinage Law information</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card mb-3" style="background-color: #C3CEDA;">
-                        <img src="https://cdn.pixabay.com/photo/2017/07/08/21/30/family-2485714_1280.jpg"
-                            class="img-fluid card-img-top" alt="parent-son-img">
-                        <div class="card-body">
-                            <h5 class="card-title">Filiación</h5>
-                            <p class="card-text">Filiation Law information</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card" style="background-color: #C3CEDA;">
-                        <img src="https://cdn.pixabay.com/photo/2019/10/19/16/30/poverty-4561704_1280.jpg"
-                            class="img-fluid card-img-top" alt="monwy-img">
-                        <div class="card-body">
-                            <h5 class="card-title">Pensión</h5>
-                            <p class="card-text">Pension Law information</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="background-color: #C3CEDA;">
-                        <img src="https://cdn.pixabay.com/photo/2020/03/28/00/21/hands-4975341_1280.jpg"
-                            class="img-fluid card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Adopción</h5>
-                            <p class="card-text">Adoption Law information</p>
+                            <h2 class="card-title">Podemos apoyar en:</h2>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    Arrendamientos industriales, comerciales y casa habitación.
+                                </li>
+                                <li class="list-group-item">
+                                    Uso de habitación.
+                                </li>
+                                <li class="list-group-item">
+                                    Recuperacición de inmuebles.
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-    </main>
 
-    <!-- {{!-- Create a button so all the users can go to the publications section
+        <section class="information-header text-center py-4">
+            <h2>Ofrecemos asesoría y ejecución en toda la República
+                Mexicana, ante tribunales locales y federales.</h2>
+        </section>
+
+        <!-- {{!-- Create a button so all the users can go to the publications section
         --}} -->
-    <section class="redirected-to-publications">
-        <div class="card border-light">
-            <!-- {{!--
+        <section class="redirected-to-publications">
+            <div class="card border-light">
+                <!-- {{!--
                 <div class="text-center card-header">Featured</div>
                 --}} -->
-            <div class="text-center card-body">
-                <h5 class="card-title">
-                    ¿Tienes dudas? Tranquil@ estamos para apoyarte.
-                </h5>
-                <a href="/publicaciones" class="btn btn-primary">Publicaciónes</a>
+                <div class="text-center card-body">
+                    <h3 class="card-title">
+                        No importa el conflicto, siempre hay una solución
+                    </h3>
+                    <a href="/publicaciones" class="btn btn-primary">Publicaciones</a>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <!-- {{!-- Third section of the homepage or presentation page this one has to go on the main handlebrs so it can be in
         the
@@ -150,7 +123,7 @@
     <footer>
         <section id="contacto" class="first-footer-section">
             <div class="card mb-0" style="max-width: 100%; margin-bottom: 0%; background-color: #050a30">
-                <h2 class="text-left mx-3">Contacto</h2>
+                <h4 class="text-left mx-3">Contacto</h4>
                 <div class="row g-0 ">
                     <div class="col-md-6 ">
                         <div class="card-body">
