--- a/public/penal.html
+++ b/public/penal.html
@@ -91,7 +91,7 @@
             <div class="card mb-3" style="border: none;">
                 <div class="row g-0">
                     <div class="col-md-4 embed-responsive embed-responsive-16by9">
-                        <img src="./images/criminal.png" class="information-img embed-responsive-item rounded-start"
+                        <img src="./images/criminal.png" class="information-img embed-responsive-item rounded-start px-4"
                             alt="family-law">
                     </div>
                     <div class="col-md-8">
