changes of alt phrases on images and metatags for investigations

--- a/public/inmobiliario.html
+++ b/public/inmobiliario.html
@@ -73,7 +73,7 @@
                 <div class="row g-0">
                     <div class="col-md-4 embed-responsive embed-responsive-16by9">
                         <img src="./images/inmobiliarie.png" class="information-img embed-responsive-item rounded-start px-4"
-                            alt="family-law">
+                            alt="inmobiliarie-law">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
