--- a/public/investigaciones.html
+++ b/public/investigaciones.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Litigio en materia familiar</title>
+    <title>Investigaciones jurídicas y financieras</title>
     <meta name="description"
-        content="Iglesias y abogados: bufete de abogados especialistas en litigio en materia familiar. Divorcios, violencia familiar, sucesión testamentaria, amparos.">
+        content="Iglesias y abogados: bufete de abogados. Investigaciones en materia jurídica, financiera, de infidelidades, búsqueda y localización de personas.">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -65,7 +65,7 @@
                 <div class="row g-0">
                     <div class="col-md-4 embed-responsive embed-responsive-16by9">
                         <img src="./images/research.png" class="information-img embed-responsive-item rounded-start px-4"
-                            alt="family-law">
+                            alt="research-law">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
