--- a/public/civil.html
+++ b/public/civil.html
@@ -84,7 +84,7 @@
                 <div class="row g-0">
                     <div class="col-md-4 embed-responsive embed-responsive-16by9">
                         <img src="./images/corporate.png" class="information-img embed-responsive-item rounded-start px-4"
-                            alt="family-law">
+                            alt="civil-law">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
