--- a/public/penal.html
+++ b/public/penal.html
@@ -92,7 +92,7 @@
                 <div class="row g-0">
                     <div class="col-md-4 embed-responsive embed-responsive-16by9">
                         <img src="./images/criminal.png" class="information-img embed-responsive-item rounded-start px-4"
-                            alt="family-law">
+                            alt="penal-law">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
