changes to publications html and addition of images

--- a/public/publicaciones.html
+++ b/public/publicaciones.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Investigaciones jurídicas y financieras</title>
+    <title>Publicaciones</title>
     <meta name="description"
-        content="Iglesias y abogados: bufete de abogados. Investigaciones en materia jurídica, financiera, de infidelidades, búsqueda y localización de personas.">
+        content="Iglesias y abogados: bufete de abogados. Publicaciones jurídicas">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
-                    <img src="./images/logo.png" alt="iglesias-logo" width="60" height="54">
+                    <img src="./images/logo.png" alt="law-publicationwidth="60" height="54">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,9 +49,9 @@
         <section class="publications-section-one">
             <div class="mx-auto mt-3 mb-3" style="width: 250px">
                 <!-- {{!-- first card with an image of the lawyer and the description of who is him --}} -->
-                <div class="card" style="width: 18rem">
-                    <img src="https://cdn.pixabay.com/photo/2015/08/03/00/04/alejandro-vergara-blanco-872557_1280.jpg"
-                        class="card-img-top img-fluid" alt="lawyer-image" />
+                <div class="card" style="border: none; width: 18rem">
+                    <!-- <img src="https://cdn.pixabay.com/photo/2015/08/03/00/04/alejandro-vergara-blanco-872557_1280.jpg"
+                        class="card-img-top img-fluid" alt="law-publication> -->
                     <div class="card-body">
                         <h1>Rodrigo Iglesias</h1>
                         <p class="card-text">Rodrigo information of publications</p>
@@ -62,17 +62,17 @@
 
         <!-- {{!-- second section of the publibations handlebar --}} -->
         <section class="publications-section-two">
-            <h1 class="text-center publications-header">Publicaciónes</h1>
+            <h2 class="text-center publications-header">Publicaciónes</h2>
 
             <div class="mx-auto card mb-3" style="max-width: 1000px">
                 <div class="row g-0">
                     <div class="col-md-6">
-                        <img src="https://cdn.pixabay.com/photo/2020/05/30/09/51/news-5238316_1280.jpg"
-                            class="img-fluid rounded-start" alt="publication-img" />
+                        <img src="./images/article-one.png"
+                            class="img-fluid rounded-start" alt="law-publication" />
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                            <h1 class="card-title">Publication title</h1>
+                            <h3 class="card-title">Publication title</h3>
                             <p class="card-text">Description of the publication</p>
                             <p class="card-text"><small class="text-muted">Date</small></p>
                         </div>
@@ -83,12 +83,12 @@
             <div class="mx-auto card mb-3" style="max-width: 1000px">
                 <div class="row g-0">
                     <div class="col-md-6">
-                        <img src="https://cdn.pixabay.com/photo/2019/02/10/19/30/newspaper-3988054_1280.jpg"
-                            class="img-fluid rounded-start" alt="publication-img" />
+                        <img src="./images/article-two.png"
+                            class="img-fluid rounded-start" alt="law-publication" />
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                            <h1 class="card-title">Publication title</h1>
+                            <h3 class="card-title">Publication title</h3>
                             <p class="card-text">Description of the publication</p>
                             <p class="card-text"><small class="text-muted">Date</small></p>
                         </div>
@@ -99,12 +99,12 @@
             <div class="mx-auto card mb-3" style="max-width: 1000px">
                 <div class="row g-0">
                     <div class="col-md-6">
-                        <img src="https://cdn.pixabay.com/photo/2018/04/16/09/33/literature-3324039_1280.jpg"
-                            class="img-fluid rounded-start" alt="publication-img" />
+                        <img src="./images/article-three.png"
+                            class="img-fluid rounded-start" alt="law-publication" />
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                            <h1 class="card-title">Publication title</h1>
+                            <h3 class="card-title">Publication title</h3>
                             <p class="card-text">Description of the publication</p>
                             <p class="card-text"><small class="text-muted">Date</small></p>
                         </div>
@@ -115,12 +115,12 @@
             <div class="mx-auto card mb-3" style="max-width: 1000px">
                 <div class="row g-0">
                     <div class="col-md-6">
-                        <img src="https://cdn.pixabay.com/photo/2017/04/23/09/31/newspaper-2253409_1280.jpg"
-                            class="img-fluid rounded-start" alt="publication-img" />
+                        <img src="./images/article-four.png"
+                            class="img-fluid rounded-start" alt="law-publication" />
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                            <h1 class="card-title">Publication title</h1>
+                            <h3 class="card-title">Publication title</h3>
                             <p class="card-text">Description of the publication</p>
                             <p class="card-text"><small class="text-muted">Date</small></p>
                         </div>
@@ -135,7 +135,7 @@
     <footer>
         <section id="contacto" class="first-footer-section">
             <div class="card mb-0" style="max-width: 100%; margin-bottom: 0%; background-color: #050a30">
-                <h2 class="text-left mx-3">Contacto</h2>
+                <h4 class="text-left mx-3">Contacto</h4>
                 <div class="row g-0 ">
                     <div class="col-md-6 ">
                         <div class="card-body">
